--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     <div class="painel">
 
-        <h1> Olá senhor engenheiro :3 </h1>
+        <h1> Olá senhor Tiago :D </h1>
 
         <img src="https://i.pinimg.com/564x/89/4f/15/894f156accbcbff8a5a406a1ba504bb8.jpg" alt="">
         <!-- <img src="https://i.pinimg.com/originals/fc/a6/08/fca608525699df213af65a7748062b04.gif" alt=""> -->
@@ -76,7 +76,7 @@
     <script>
 
         function sim() {
-            alert("Parabéns!! E isso não é pegadinha, prometo pagar. :)")
+            alert("Ebaaa, vamo bora :)")
         }
 
         function fuja() {
