--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             margin-left: 100px;
             width: 60px;
             height: 40px;
-            background-color: #000000a2;
+            background-color: #green;
             border: white;
             border-radius: 10px;
             color: white;
@@ -64,7 +64,7 @@
 
         <h1> Olá senhor Tiago :D </h1>
 
-        <img src="https://i.pinimg.com/564x/89/4f/15/894f156accbcbff8a5a406a1ba504bb8.jpg" alt="">
+        <img src="https://preview.redd.it/rbt3x0wxpoc51.jpg?auto=webp&s=9af77f0c9cd982d6a69b491bc7fff50d011b78ec" alt="">
         <!-- <img src="https://i.pinimg.com/originals/fc/a6/08/fca608525699df213af65a7748062b04.gif" alt=""> -->
 
         <h5> Aceita sair comigo? </h5>
