--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <style>
         body {
-            background-color: rgb(7, 142, 196);
+            background-color: rgb(green);
         }
 
 
@@ -41,7 +41,7 @@
             margin-left: 100px;
             width: 60px;
             height: 40px;
-            background-color: #green;
+            background-color: #000000a2;
             border: white;
             border-radius: 10px;
             color: white;
