--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <style>
         body {
-            background-color: rgb(green);
+            background-color: rgb(7, 92, 196);
         }
 
 
